# rp_freertos_template

./: CMakeLists.txt  FreeRTOSConfig.h  main.c
